// Vitest Snapshot v1

exports[`Dynamic > Interface extends interface > Has reference > 1.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
type Baz = boolean
type Bar = number
type Foo = string
interface Props {
  baz: Baz
  foo: Foo
  bar: Bar
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Interface extends interface > Has reference > 2.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
type Baz = boolean
interface BaseProps {
  baz: Baz
}
type Bar = number
type Foo = string
interface Props {
  baz: Baz
  foo: Foo
  bar: Bar
  base: BaseProps
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Interface extends interface > Has reference > 3.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
type Qux = 'qux'
type Baz = boolean
interface BaseProps {
  qux: Qux
  baz: Baz
}
type Bar = number
type Foo = string
interface Props {
  qux: Qux
  baz: Baz
  foo: Foo
  bar: Bar
  base: BaseProps
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Interface extends interface > Has reference > external_1.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
type _VTI_TYPE_Baz = boolean
type Bar = number
type Foo = string
interface Props {
  baz: _VTI_TYPE_Baz
  foo: Foo
  bar: Bar
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Interface extends interface > Has reference > external_2.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
interface _VTI_TYPE_BaseProps {}
type Bar = number
type Foo = string
interface Props {
  foo: Foo
  bar: Bar
  base: _VTI_TYPE_BaseProps
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Interface extends interface > Has reference > external_3.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
interface _VTI_TYPE_BaseProps {}
type Bar = number
type Foo = string
interface Props {
  foo: Foo
  bar: Bar
  base: _VTI_TYPE_BaseProps
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Interface extends interface > No reference > index.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
  baz: boolean
  foo: string
  bar: number
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Interface extends interface > No reference > internal.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
  baz: boolean
  foo: string
  bar: number
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Interface without reference > No transform > index.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
  foo: string
  bar: number
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Multi level reference > Default > 1.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = number
type Bar = Foo
interface Props {
  foo: Foo
  bar: Bar
}
defineProps<Props>()
</script>
"
`;

exports[`Dynamic > Multi level reference > Default > 2.vue (default) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = number
type Bar = Foo
type Qux = Foo
type Baz = Bar
interface Props {
  foo: Foo
  bar: Bar
  baz: Baz
  qux: Qux
}
defineProps<Props>()
</script>
"
`;
